# ProtoBot

./: .editorconfig  .gitignore  Dockerfile  README.md  pyproject.toml
protobot/: bot.py
protobot/roles/: checks.py  commands.py  messages.py  utils.py
